--- a/config/server.production.conf
+++ b/config/server.production.conf
@@ -1,10 +1,10 @@
 server {
   listen 80;
 
-  root /home/duck/little-color;
+  root /home/duck/web/ddots;
   index index.html index.htm;
 
-  server_name color.fuz.si;
+  server_name ddots.fuz.si;
 
   location / {
     proxy_pass http://127.0.0.1:5000;
