--- a/config/server.production.conf
+++ b/config/server.production.conf
@@ -1,16 +1,34 @@
 server {
-  listen 80;
-
+  listen ddots.fuz.si:80;
   root /home/duck/web/ddots;
-  index index.html index.htm;
-
-  server_name ddots.fuz.si;
+  error_log  /home/duck/web/ddots/logs/error.log;
 
   location / {
-    proxy_pass http://127.0.0.1:5000;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
+    root /home/duck/web/ddots;
+    index index.php index.html index.htm;
+
+    if (-f $request_filename) {
+      expires 30d;
+      break;
+    }
+
+    if (!-e $request_filename) {
+      rewrite ^(.+)$ /index.php?q=$1 last;
+    }
+  }
+
+  location ~ \.php$ {
+    fastcgi_param SCRIPT_FILENAME /home/duck/web/ddots/$fastcgi_script_name;
+    fastcgi_param PATH_INFO $fastcgi_script_name;
+
+    fastcgi_intercept_errors on;
+    fastcgi_index  index.php;
+    fastcgi_pass 127.0.0.1:9000;
+
+    include /etc/nginx/fastcgi_params;
+  }
+
+  location ~ /\.ht {
+     deny  all;
   }
 }
