--- a/config/server.production.conf
+++ b/config/server.production.conf
@@ -3,29 +3,38 @@ server {
   root /home/duck/web/ddots;
   error_log  /home/duck/web/ddots/logs/error.log;
 
-  location / {
-    root /home/duck/web/ddots;
-    index index.php index.html index.htm;
-
-    if (-f $request_filename) {
-      expires 30d;
-      break;
-    }
-
-    if (!-e $request_filename) {
-      rewrite ^(.+)$ /index.php?q=$1 last;
-    }
-  }
+#  location / {
+#    root /home/duck/web/ddots;
+#    index index.php index.html index.htm;
+#
+#    if (-f $request_filename) {
+#      expires 30d;
+#      break;
+#    }
+#
+#    if (!-e $request_filename) {
+#      rewrite ^(.+)$ /index.php?q=$1 last;
+#    }
+#  }
 
   location ~ \.php$ {
-    fastcgi_param SCRIPT_FILENAME /home/duck/web/ddots/$fastcgi_script_name;
-    fastcgi_param PATH_INFO $fastcgi_script_name;
 
-    fastcgi_intercept_errors on;
-    fastcgi_index  index.php;
-    fastcgi_pass 127.0.0.1:9000;
+
+#    fastcgi_param SCRIPT_FILENAME /home/duck/web/ddots/$fastcgi_script_name;
+#    fastcgi_param PATH_INFO $fastcgi_script_name;
+#
+#    fastcgi_intercept_errors on;
+#    fastcgi_index  index.php;
+#    fastcgi_pass 127.0.0.1:9000;
+
+    try_files $uri =404;
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    fastcgi_pass unix:/var/run/php5-fpm.sock;
+    fastcgi_index index.php;
 
     include /etc/nginx/fastcgi_params;
+    # include fastcgi_params;
+
   }
 
   location ~ /\.ht {
