--- a/config/server.production.conf
+++ b/config/server.production.conf
@@ -17,15 +17,13 @@ server {
 #    }
 #  }
 
+
   location ~ \.php$ {
+    fastcgi_param SCRIPT_FILENAME /home/duck/web/ddots/$fastcgi_script_name;
+    fastcgi_param PATH_INFO $fastcgi_script_name;
 
-
-#    fastcgi_param SCRIPT_FILENAME /home/duck/web/ddots/$fastcgi_script_name;
-#    fastcgi_param PATH_INFO $fastcgi_script_name;
-#
-#    fastcgi_intercept_errors on;
-#    fastcgi_index  index.php;
-#    fastcgi_pass 127.0.0.1:9000;
+    fastcgi_intercept_errors on;
+    # fastcgi_pass 127.0.0.1:9000;
 
     try_files $uri =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
