--- a/config/server.production.conf
+++ b/config/server.production.conf
@@ -3,19 +3,19 @@ server {
   root /home/duck/web/ddots;
   error_log  /home/duck/web/ddots/logs/error.log;
 
-#  location / {
-#    root /home/duck/web/ddots;
-#    index index.php index.html index.htm;
-#
-#    if (-f $request_filename) {
-#      expires 30d;
-#      break;
-#    }
-#
-#    if (!-e $request_filename) {
-#      rewrite ^(.+)$ /index.php?q=$1 last;
-#    }
-#  }
+  location / {
+    root /home/duck/web/ddots;
+    index index.php index.html index.htm;
+
+    if (-f $request_filename) {
+      expires 30d;
+      break;
+    }
+
+    if (!-e $request_filename) {
+      rewrite ^(.+)$ /index.php?q=$1 last;
+    }
+  }
 
 
   location ~ \.php$ {
